Test offset date time with spring boot.